Made the Board class with ctors, getters, indexers A move method, a can piece move method and a delete solider method

--- a/HW_Project_LiorYehezkely_JacobGalam.vcxproj
+++ b/HW_Project_LiorYehezkely_JacobGalam.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -22,6 +22,7 @@
     <ClCompile Include="Bishop.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GraphicsPipe.cpp" />
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="Solider.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -30,7 +31,9 @@
   <ItemGroup>
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="Board.h" />
+    <ClInclude Include="enums.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GraphicsPipe.h" />
     <ClInclude Include="King.h" />
     <ClInclude Include="Knight.h" />
     <ClInclude Include="Pawn.h" />
