Altered the design of the soliders and made the queen

--- a/HW_Project_LiorYehezkely_JacobGalam.vcxproj.filters
+++ b/HW_Project_LiorYehezkely_JacobGalam.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="GraphicsPipe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Queen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pipe.h">
