--- a/HW_Project_LiorYehezkely_JacobGalam.vcxproj
+++ b/HW_Project_LiorYehezkely_JacobGalam.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GraphicsPipe.cpp" />
     <ClCompile Include="Position.cpp" />
+    <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Solider.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="stdafx.cpp" />
